Fix T57483: Driver on grease pencil modifier does not update